Tests/RunCMake/NinjaMultiConfig/SimpleNoCross-relwithdebinfo-in-release-graph-target-ninja-stderr.txt
^ninja: error: unknown target 'simplestatic:RelWithDebInfo'$
